# demo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  app.py  docker-compose.yml  flake.nix  main.py  pyproject.toml  run.ps1  run.sh
demo/: __main__.py  app.py  sentiment_analysis.py  tweet.py
demo/business idea/: categorization.py
demo/business-idea/: __init__.py  categorization.py  marc.ipynb  marc.py  sentiment.py
demo/conversation/: __init__.py  adjust.py  categorization.py  sentiment.py
demo/poster-plots/: dumbell.ipynb  dumbell.py  pie_chart.ipynb  sankey.ipynb  sankey.py  spider_chart.ipynb
demo/poster_plots/: __init__.py  categories_pie_chart.py  compare_categories.py  distribution_comparison.py  dumbell.py  heatmap_categories_tests.py  heatmap_ks_tests.py  sankey.py  spider_chart.py  violin_british_vs_others.py  violins_by_category.py
