[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "convstr",
    "matplotlib>=3.10.3",
    "np>=1.0.2",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250527",
    "plotly>=6.1.2",
    "nbformat>=5.0.0"
]

[tool.uv.sources]
convstr = { git = "https://github.com/zenithanalitica/conversation-store" }

